add missing manifests

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -25,18 +25,20 @@ jobs:
     - name: Build and Push Frontend Image
       run: |
         IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/menn-frontend
-        docker buildx build --platform linux/amd64 \
-          -t $IMAGE_NAME:latest \
-          -t $IMAGE_NAME:${{ github.sha }} \
-          ./frontend \
-          --push
+        docker buildx build --platform linux/amd64 -t $IMAGE_NAME:latest -t $IMAGE_NAME:${{ github.sha }} ./frontend --push
 
     - name: Build and Push Backend Image
       run: |
         IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/menn-backend
-        docker buildx build --platform linux/amd64 \
-          -t $IMAGE_NAME:latest \
-          -t $IMAGE_NAME:${{ github.sha }} \
-          ./backend \
-          --push
+        docker buildx build --platform linux/amd64 -t $IMAGE_NAME:latest -t $IMAGE_NAME:${{ github.sha }} ./backend --push
+
+    - name: Trigger update in menn-k8s repo
+      uses: peter-evans/repository-dispatch@v3
+      with:
+        token: ${{ secrets.K8S_REPO_TOKEN }}
+        repository: hsb943/menn-k8s
+        event-type: update-manifests
+        client-payload: '{"sha": "${{ github.sha }}"}'
+
+
 
